--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ table {
 }
 
 th, td {
-    border: 4px solid #000000; /* Borda para as células da tabela */
+    border: 2px solid #000000; /* Borda para as células da tabela */
     padding: 4px; /* Espaçamento interno das células */
     text-align: center; /* Centraliza o conteúdo das células */
 }
@@ -58,7 +58,7 @@ th {
 }
 
 table tr:nth-child(even) {
-    background-color: #f2f2f2; /* Cor de fundo para linhas pares */
+    background-color: 84afee; /* Cor de fundo para linhas pares */
 }
 
 a {
